# Sieve

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
npm/: package.json
npm/scripts/: install.js
sieve/: .gitignore  README.md
sieve/npm/scripts/: install.js
sieve/src/: cli.rs  fixer.rs  git.rs  main.rs  scanner.rs
src/: baseline.rs  main.rs  ui.rs
