[package]
name = "sieve"
version = "0.1.0"
edition = "2021"
description = "A TUI-first secret leak tripwire for developers"
license = "MIT"
repository = "https://github.com/example/sieve"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
ignore = "0.4"
rayon = "1.8"
ratatui = "0.26"
crossterm = "0.27"
lazy_static = "1.4"
copypasta = "0.10"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true
strip = true
opt-level = 3
